// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match disabled snapshot 1`] = `
<button
  aria-disabled="true"
  class="sc-AxjAm CImRz"
  type="button"
>
  Continue
</button>
`;

exports[`Button should match snapshot 1`] = `
<button
  class="sc-AxjAm jwRqPu"
  type="button"
>
  Continue
</button>
`;
